--- a/tt-frontend/public/index.html
+++ b/tt-frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Tech-Tracker</title>
   </head>
-  <body>
+  <body style="background-color: #FAF9F6;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
