added more styling and layout changes

--- a/tt-frontend/public/index.html
+++ b/tt-frontend/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700');
+    </style>
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700" rel="stylesheet">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,9 +32,19 @@
     -->
     <title>Tech-Tracker</title>
   </head>
-  <body style="background-color: #FAF9F6;">
+  <body>
+    <style>
+      body{
+        background-color: #ffffff;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23ff0000' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23e62b2b' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23f90101' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23ec3937' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23f30202' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23f14543' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23ed0203' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23f6514f' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23e70303' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23fb5b5b' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23e10404' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23ff6666' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
+      }
+    </style>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
